test/soya/error/type/array.soy
function void main() {
  int i = 0;
  putchar(i[0]);
}
